complete html and css

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <main>
         <div class="calculator">
             <div class="output">
-                <div class="previous"></div>
-                <div class="curret"></div>
+                <div class="previous"> 222 </div>
+                <div class="current"> 111 </div>
             </div>
             <div class="calculator-indicators">
                 <button class="span-two"> AC </button>
