--- a/index.html
+++ b/index.html
@@ -12,31 +12,32 @@
     <main>
         <div class="calculator">
             <div class="output">
-                <div class="previous"> 222 </div>
-                <div class="current"> 111 </div>
+                <div class="previous"> 0 </div>
+                <div class="current"> 0 </div>
             </div>
             <div class="calculator-indicators">
                 <button class="span-two"> AC </button>
                 <button> DEL </button>
-                <button> \ </button>
-                <button> 1 </button>
-                <button> 2 </button>
-                <button> 3 </button>
-                <button> * </button>
-                <button> 4 </button>
-                <button> 5 </button>
-                <button> 6 </button>
-                <button> + </button>
-                <button> 7 </button>
-                <button> 8 </button>
-                <button> 9 </button>
-                <button> - </button>
-                <button> . </button>
-                <button> 0 </button>
+                <button data-number> \ </button>
+                <button data-number> 1 </button>
+                <button data-number> 2 </button>
+                <button data-number> 3 </button>
+                <button data-operation> * </button>
+                <button data-number> 4 </button>
+                <button data-number> 5 </button>
+                <button data-number> 6 </button>
+                <button data-operation> + </button>
+                <button data-number> 7 </button>
+                <button data-number> 8 </button>
+                <button data-number> 9 </button>
+                <button data-operation> - </button>
+                <button data-operation> . </button>
+                <button data-number> 0 </button>
                 <button class="span-two"> = </button>
             </div>
         </div>
     </main>
     
+    <script src="./index.js"> </script>
 </body>
 </html>
